<resources>
    <string name="app_name">Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_main">to main</string>
    <string name="item">Item</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="add">Add</string>
    <string name="main">Main</string>
    <string name="settings">Settings</string>
    <string name="person">Person</string>
    <string name="user_name">User Name</string>
    <string name="log_out">Log Out</string>
    <string name="map">Map</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="register">Register</string>
    <string name="alredy_have_account">Alredy have account?</string>
    <string name="name">Name</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="origin">Origin</string>
    <string name="category">Category</string>
    <string name="barcode">Barcode</string>
    <string name="product_image">Product Image</string>
    <string name="search">Search</string>
    <string name="pick_image">Pick image</string>
    <string name="save">Save</string>
    <string name="picked_image">Picked Image</string>
    <string name="user">User</string>
    <string name="product">Product</string>
    <string name="no_result">No Result</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="my_products">My Products</string>
    <string name="scan">Scan</string>
</resources>