<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragmentPD"
    tools:context=".fragments.ProductDetailsFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="35dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewProductImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/product"
            android:src="@drawable/baseline_map_24" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:text="@string/name"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivAddFavorites"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/favorites"
            android:src="@drawable/baseline_favorite_border_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewManufacturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manufacturer"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/textViewCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/origin"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/textViewCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewBarcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/barcode"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:text="@string/user"
            android:textSize="20sp"
            android:textStyle="italic"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>