<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvProductItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        android:elevation="5dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:contentDescription="@string/product_image" />
            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tvOrigin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/origin"
                android:textSize="17sp"
                android:textStyle="italic"/>

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="end"
                android:layout_weight="1"
                android:layout_gravity="end">

                <TextView
                    android:id="@+id/tvManufacturer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manufacturer"/>
                <TextView
                    android:id="@+id/tvCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"/>
                <TextView
                    android:id="@+id/tvBarcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/barcode"/>
            </LinearLayout>
            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>