<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvFavoritesItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        app:cardCornerRadius="25dp"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivFavoritesImage"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:contentDescription="@string/product_image" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/tvFavoritesName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/name"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <Space
                android:layout_width="15dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tvOrigin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/origin"
                android:textSize="17sp"
                android:textStyle="italic"/>

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/tvFavoritesBarcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/barcode" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>