<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewPerson"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="35dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.003"
            app:cardCornerRadius="25dp"
            android:elevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/ivPerson"
                    android:layout_height="96dp"
                    android:layout_width="96dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/baseline_person_24"
                    android:contentDescription="@string/person" />
                <Space
                    android:layout_width="50dp"
                    android:layout_height="match_parent"/>
                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="match_parent"
                    android:layout_height="25sp"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="25dp"
                    android:hint="@string/user_name"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewPerson"
            app:cardCornerRadius="25dp"
            android:elevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <ImageView
                            android:id="@+id/ivLogout"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginStart="15dp"
                            android:contentDescription="@string/log_out"
                            android:src="@drawable/baseline_logout_24"/>

                        <Space
                            android:layout_width="48dp"
                            android:layout_height="match_parent"/>
                        <TextView
                            android:id="@+id/tvLogout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/log_out"
                            android:textSize="20sp"
                            android:gravity="start|center"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>